# coalgas

./: .gitignore  CLAUDE.md  DATA_SOURCES.md  README.md  filter_study_area.py  pyproject.toml  summarize_coal_data.py  visualize_3d.py  visualize_coal_data.py
.scud/tasks/: tasks.scg
data/csv/: all-coals-study-area-combined.csv  colchester-depth.csv  colchester-thickness.csv  major-coals-all-study-area.csv  minor-coals-all-study-area.csv  seelyville-depth.csv  seelyville-thickness.csv
data/downloads/majorcoals/: coalstrat_major.html  coalstrat_major.xlsx
data/downloads/minorcoals/: coalstrat_minor.html  coalstrat_minor.txt  coalstrat_minor.xlsx
examples/: herrin-depth-sample.csv  major-coals-sample.csv  minor-coals-sample.csv
thoughts/shared/handoffs/: 2025-01-04-cbm-data-acquisition-handoff.md
thoughts/shared/plans/: 2025-01-04-crawford-county-cbm-data-acquisition.md  2025-01-05-3d-coal-seam-visualization.md  2025-01-05-coal-seam-visualizations.md
thoughts/shared/research/: 2025-01-05-repository-documentation.md
visualizations/interactive/: colchester-map.html  danville-map.html  herrin-map.html  seelyville-map.html  springfield-map.html
